# antigravity-terminal-mcp

./: .gitignore  README.md  open-monitor.ps1  pyproject.toml  server.py
vscode-integration/: antigravity-terminal-vscode-0.0.1.vsix  antigravity-terminal-vscode-0.0.2.vsix  antigravity-terminal-vscode-0.0.3.vsix  antigravity-terminal-vscode-0.0.4.vsix  antigravity-terminal-vscode-0.0.5.vsix  antigravity-terminal-vscode-0.0.6.vsix  antigravity-terminal-vscode-0.0.7.vsix  extension.js  package.json
